simple-k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: pingpong
        image: afsanarozan/exam:v1
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-deployment
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - port: 8081
      targetPort: 3000
      protocol: TCP
      name: serviceport
