pingpong-ingress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
spec:
    replicas: 3
    selector:
      matchLabels:
        app: pingpong-apps
    template:
      metadata:
        labels:
          app: pingpong-apps
      spec:
        containers:
        - name: pingpong-apps
          image: afsanarozan/exam:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: pingpong-service
spec:
    selector:
      app: pingpong-apps
    ports:
      - port: 80
        targetPort: 3000
        protocol: TCP

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pingpong-ingress
  labels:
    app: pingpong-ingress
spec:
  rules:
    - host: nopal.me
      http: 
        paths: 
          - backend:
              serviceName: pingpong-service
              servicePort: 80
