service-nginx-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: pingpong
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pingpong-app
    namespace: pingpong
spec:
    replicas: 2
    selector:
      matchLabels:
        app: pingpong-apps
    template:
      metadata:
        labels:
          app: pingpong-apps
      spec:
        containers:
        - name: pingpong-apps
          image: afsanarozan/exam:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: pingpong-service
    namespace: pingpong
    labels:
      app: pingpong-services
spec:
    selector:
      app: pingpong-apps
    ports:
      - port: 80
        targetPort: 8080
        protocol: TCP
        name: serviceport
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: nginx-ingress
    labels:
      name: nginx-ingress
    namespace: pingpong
spec:
  rules:
    - host: www.pingpong.com
      http:
        paths:
         - backend:
            serviceName: pingpong-service
            servicePort: 80
